{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 26,
  "lineage": "648d7451-b137-214e-6a6f-adcb06bd9de2",
  "resources": [
    {
      "module": "module.ec2_asg_lb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:452303021915:loadbalancer/app/my-lb-tg/057d8a6fe53cfae2",
            "arn_suffix": "app/my-lb-tg/057d8a6fe53cfae2",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-lb-tg-1268803461.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:452303021915:loadbalancer/app/my-lb-tg/057d8a6fe53cfae2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-lb-tg",
            "preserve_host_header": false,
            "security_groups": [
              "sg-011631608d6b7b64b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a2fb7cf56a39a97e"
              },
              {
                "subnet_id": "subnet-0d37a6a794048c207"
              }
            ],
            "subnets": [
              "subnet-0a2fb7cf56a39a97e",
              "subnet-0d37a6a794048c207"
            ],
            "vpc_id": "vpc-0ae6dea5837cb2fda",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_security_group.my_sg",
            "module.networking_module.aws_subnet.my_subnet_1a",
            "module.networking_module.aws_subnet.my_subnet_1b",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_asg_lb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:452303021915:listener/app/my-lb-tg/057d8a6fe53cfae2/bdf5074b4f875d57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:452303021915:targetgroup/my-lb-tg/f4c02e9b8f826d00",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:452303021915:listener/app/my-lb-tg/057d8a6fe53cfae2/bdf5074b4f875d57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:452303021915:loadbalancer/app/my-lb-tg/057d8a6fe53cfae2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_asg_lb_module.aws_lb.my_lb",
            "module.ec2_asg_lb_module.aws_lb_target_group.my_lb_tg",
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_security_group.my_sg",
            "module.networking_module.aws_subnet.my_subnet_1a",
            "module.networking_module.aws_subnet.my_subnet_1b",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_asg_lb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:452303021915:targetgroup/my-lb-tg/f4c02e9b8f826d00",
            "arn_suffix": "targetgroup/my-lb-tg/f4c02e9b8f826d00",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:452303021915:targetgroup/my-lb-tg/f4c02e9b8f826d00",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:452303021915:loadbalancer/app/my-lb-tg/057d8a6fe53cfae2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0247ce6cb007de17a",
            "association_id": "eipassoc-07a7dc35ca02176da",
            "domain": "vpc",
            "id": "eipalloc-0247ce6cb007de17a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e14fb2ee9686497d",
            "private_dns": "ip-10-0-2-97.ec2.internal",
            "private_ip": "10.0.2.97",
            "public_dns": "ec2-34-225-186-96.compute-1.amazonaws.com",
            "public_ip": "34.225.186.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lsvar.eip_name"
            },
            "tags_all": {
              "Name": "lsvar.eip_name"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:internet-gateway/igw-0141a28b1facf3287",
            "id": "igw-0141a28b1facf3287",
            "owner_id": "452303021915",
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_for_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0247ce6cb007de17a",
            "association_id": "eipassoc-07a7dc35ca02176da",
            "connectivity_type": "public",
            "id": "nat-07e0d370326bec76f",
            "network_interface_id": "eni-0e14fb2ee9686497d",
            "private_ip": "10.0.2.97",
            "public_ip": "34.225.186.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a2fb7cf56a39a97e",
            "tags": {
              "Name": "NAT for private subnet"
            },
            "tags_all": {
              "Name": "NAT for private subnet"
            }
          },
          "dependencies": [
            "module.networking_module.aws_eip.my_eip",
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_subnet.my_subnet_1a",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:route-table/rtb-03b91fb634fa8cb58",
            "id": "rtb-03b91fb634fa8cb58",
            "owner_id": "452303021915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0141a28b1facf3287",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:route-table/rtb-0f0a05bc044e1677b",
            "id": "rtb-0f0a05bc044e1677b",
            "owner_id": "452303021915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07e0d370326bec76f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_eip.my_eip",
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_nat_gateway.nat_for_private_subnet",
            "module.networking_module.aws_subnet.my_subnet_1a",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002a0d436f2462cdc",
            "route_table_id": "rtb-03b91fb634fa8cb58",
            "subnet_id": "subnet-0a2fb7cf56a39a97e"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_route_table.my_rt",
            "module.networking_module.aws_subnet.my_subnet_1a",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f839def216c12185",
            "route_table_id": "rtb-03b91fb634fa8cb58",
            "subnet_id": "subnet-0d37a6a794048c207"
          },
          "dependencies": [
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_route_table.my_rt",
            "module.networking_module.aws_subnet.my_subnet_1b",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c68eacd8b55fd78",
            "route_table_id": "rtb-0f0a05bc044e1677b",
            "subnet_id": "subnet-03c9f3e7587b504d1"
          },
          "dependencies": [
            "module.networking_module.aws_eip.my_eip",
            "module.networking_module.aws_internet_gateway.igw",
            "module.networking_module.aws_nat_gateway.nat_for_private_subnet",
            "module.networking_module.aws_route_table.my_rt_private",
            "module.networking_module.aws_subnet.my_subnet_1a",
            "module.networking_module.aws_subnet.my_subnet_2",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:security-group/sg-011631608d6b7b64b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011631608d6b7b64b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "452303021915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg_for_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:security-group/sg-0ca49425e56b5b89a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca49425e56b5b89a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http request from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011631608d6b7b64b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_sc_ec2",
            "name_prefix": "",
            "owner_id": "452303021915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking_module.aws_security_group.my_sg",
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:subnet/subnet-0a2fb7cf56a39a97e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2fb7cf56a39a97e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452303021915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:subnet/subnet-0d37a6a794048c207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d37a6a794048c207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452303021915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:subnet/subnet-03c9f3e7587b504d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c9f3e7587b504d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452303021915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ae6dea5837cb2fda"
          },
          "dependencies": [
            "module.networking_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:452303021915:vpc/vpc-0ae6dea5837cb2fda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c1e1680d88d981d",
            "default_route_table_id": "rtb-0748aad3f51e719b2",
            "default_security_group_id": "sg-04dccbcabd55b3777",
            "dhcp_options_id": "dopt-0c7f38e2cabedbb91",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae6dea5837cb2fda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0748aad3f51e719b2",
            "owner_id": "452303021915",
            "tags": {
              "name": "my_vpc"
            },
            "tags_all": {
              "name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}